# simple-backtest-kankane

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_yf_backtest.py
.github/workflows/: ci.yml  publish.yml
notebooks/: 01_basic_usage.ipynb  02_candle_strategies.ipynb  03_ta_strategies.ipynb  04_ml_strategies.ipynb  05_commission_usage.ipynb  06_advanced_optimization.ipynb  README.md
simple_backtest/: __init__.py
simple_backtest/commission/: __init__.py  base.py  flat.py  percentage.py  tiered.py
simple_backtest/config/: __init__.py  settings.py
simple_backtest/core/: __init__.py  backtest.py  portfolio.py  results.py
simple_backtest/data/: __init__.py  alphavantage_loader.py  base.py  ccxt_loader.py  csv_loader.py  polygon_loader.py  yfinance_loader.py
simple_backtest/metrics/: __init__.py  calculator.py  definitions.py
simple_backtest/optimization/: __init__.py  base.py  grid_search.py  random_search.py  walk_forward.py
simple_backtest/strategy/: __init__.py  base.py  buy_and_hold.py  dca.py  moving_average.py
simple_backtest/utils/: __init__.py  caching.py  commission.py  execution.py  logger.py  validation.py
simple_backtest/visualization/: __init__.py  plotter.py
tests/: conftest.py  test_backtest_integration.py  test_built_in_strategies.py  test_commission.py  test_commission_utils.py  test_config.py  test_data_loaders.py  test_execution.py  test_metrics.py  test_optimization.py  test_portfolio.py  test_results.py  test_strategy.py  test_strategy_base.py  test_validation.py
